2010-06-16  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Set current working directory for each of tests
        https://bugs.webkit.org/show_bug.cgi?id=40668

        This change fixes tests with eventSender.beginDragWithFiles().

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (runTest):

2010-06-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=40732
        WebKit2: Implement didClearWindowForFrame for InjectedBundles

        - Stub out use of bundlified didClearWindowForFrame with logging.

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * MiniBrowser/mac/WebBundle/WebBundleMain.c: Removed.
        * MiniBrowser/mac/WebBundle/WebBundleMain.m: Added.
        (_didClearWindow):
        (_didCreatePage):
        (WKBundleInitialize):

2010-06-16  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] r60803 broke media/controls-drag-timebar.html
        https://bugs.webkit.org/show_bug.cgi?id=40269

        Only queue events while the mouse button is down, if drag mode is enabled. Some
        tests may disable drag mode, to prevent the queuing of events in this situation.

        * DumpRenderTree/gtk/EventSender.cpp:
        (sendOrQueueEvent): Only queue events here if dragMode is true.

2010-06-16  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Remove the abuse of GDK_CURRENT_TIME in the DRT
        https://bugs.webkit.org/show_bug.cgi?id=40600

        * DumpRenderTree/gtk/EventSender.cpp:
        (prepareMouseButtonEvent): Remove logic adding an offset to GDK_CURRENT_TIME.

2010-06-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Dimitri Glazkov.

        Add a hidden land-cowboy command to webkit-patch to help land quick
        build fixes.
