@@ -1,3 +1,10 @@
+2010-06-16  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fix after new method addition.
+
+        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
+        (LayoutTestController::pageProperty):
+
 2010-06-16  Kent Tamura  <tkent@chromium.org>
 
         Reviewed by Dimitri Glazkov.
